<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.teletha</groupId>
	<artifactId>belldandy</artifactId>
	<version>0.1</version>
	<packaging>jar</packaging>
	<name>belldandy</name>
	<description>Beldandy offers various functions specifically for virtual threads.

- ScheduledExecutorService</description>
	<dependencies>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>antibug</artifactId>
			<version>1.9.0</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>sinobu</artifactId>
			<version>3.14.1</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
	</dependencies>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
	<repositories>
		<repository>
			<id>Maven</id>
			<name>repo1.maven.org</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>JitPack</id>
			<name>jitpack.io</name>
			<url>https://jitpack.io/</url>
		</repository>
	</repositories>
	<url>https://github.com/teletha/belldandy</url>
	<scm>
		<url>https://github.com/teletha/belldandy</url>
		<connection>scm:git:https://github.com/teletha/belldandy.git</connection>
		<developerConnection>scm:git:https://github.com/teletha/belldandy.git</developerConnection>
	</scm>
	<issueManagement>
		<system>github</system>
		<url>https://github.com/teletha/belldandy/issues</url>
	</issueManagement>
	<developers>
		<developer>
			<name>teletha</name>
			<email/>
			<url>https://github.com/teletha</url>
		</developer>
	</developers>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<release>21</release>
					<compilerArgs/>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
			</plugin>
		</plugins>
	</build>
</project>